fix: remove unnecessary flex display and text alignment from swiper-slide

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -68,11 +68,9 @@ code {
 }
 
 .swiper-slide {
-  display: flex;
-
+ 
   width: 100%;
   height: 100%;
-  text-align: center;
   background: rgb(16, 20, 57);
   background: radial-gradient(circle, rgba(16, 20, 57, 1) 0%, rgba(85, 116, 177, 1) 100%);
 
